--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "ktane-bomb-manual",
     "version": "2.0.0",
+    "homepage": "https://keenanshumard.com/KTANE-Bomb-Manual/",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.11.3",
@@ -24,6 +25,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -47,5 +50,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^6.1.1"
     }
 }
