--- a/.github/workflows/deploy_from_main.yml
+++ b/.github/workflows/deploy_from_main.yml
@@ -29,11 +29,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    - name: Run the tests
+    - name: Test
       run: npm test
     
-    - name: Run build
-    - run: npm run build --if-present
+    - name: Build
+      run: npm run build --if-present
 
     - name: Deploy
       run: |
