--- a/.github/workflows/deploy_from_main.yml
+++ b/.github/workflows/deploy_from_main.yml
@@ -29,6 +29,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
+    - name: Install dependencies
+      run: npm install
+
     - name: Test
       run: npm test
     
